--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -8,7 +8,7 @@
     $(function(){
       $('#challenge_form').submit(function(){
         $("#loading_image").show();
-        $("#submit_button").attr("disabled","disabled").addClass("disabled").text("Submitting...";
+        $("#submit_button").attr("disabled","disabled").addClass("disabled").text("Submitting...");
         return false;
       });
     });
