--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -92,13 +92,13 @@
                 %label What type of response should people give?
                 %label.radio
                   = f.radio_button(:answer_sub_type, Task::TEXT, class: "answer_sub_type")
-                  Text response
+                  = Task::SUBTYPES[Task::TEXT]
                 %label.radio
                   = f.radio_button(:answer_sub_type, Task::IMAGE, class: "answer_sub_type")
-                  Image upload
+                  = Task::SUBTYPES[Task::IMAGE]
                 %label.radio
                   = f.radio_button(:answer_sub_type, Task::YOUTUBE, class: "answer_sub_type")
-                  YouTube video
+                  = Task::SUBTYPES[Task::YOUTUBE]
                 %span.error_message
                 %a.next.button.button-actionable{ href: "#", style:"float:right;"} Next
               %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
@@ -117,7 +117,7 @@
                   %span.question{style:"font-weight:bold;font-size:14px;"}
                 %h4{style:"margin-top:12px; font-size:14px;"} Question type:
                 %div{style:"margin-left:12px;"}
-                  %span{style:"font-weight:bold;font-size:14px;"} ***Question type goes here***
+                  %span.task_subtype{style:"font-weight:bold;font-size:14px;"} 
                 %h4{style:"margin-top:12px; font-size:14px; "} Here's where this question will appear:
                 %div{style:"margin-left:12px;"}
                   %span{style:" font-size:14px;"} Challenge:
@@ -221,6 +221,7 @@
     
     var display_type = #{@display_type || 0};
     var open_tab;
+    var task_subtypes = #{Task::SUBTYPES.to_json};
     $(function(){
       if(display_type == 0){ open_tab = "#questions_tab_link"; } 
       if(display_type == 2){ open_tab = "#arena_tab_link"; } 
@@ -267,6 +268,7 @@
             }
           }
           $editor.find(".step2 span.question").text($editor.find("textarea[name='task[question]']").val());
+          $editor.find(".step2 span.task_subtype").text(task_subtypes[$editor.find("input[name*=answer_sub_type]:checked").val()]);
           $editor.find(".step1").hide();
           $editor.find(".step2").show();
         });
