--- a/app/assets/stylesheets/launchpad.css
+++ b/app/assets/stylesheets/launchpad.css
@@ -1,4 +1,4 @@
-.launchpad { width:880px; min-height:500px; margin: 0px auto; border:10px solid rgba(43, 43, 43, 0.69); text-align:left; border-radius: 10px; box-shadow: 0 0 50px 20px rgba(0, 0, 0, .05); padding:11px 11px 0 11px; background-color: #F9F9F9; }
+.launchpad { width:880px; min-height:545px; margin: 0px auto; border:10px solid rgba(43, 43, 43, 0.69); text-align:left; border-radius: 10px; box-shadow: 0 0 50px 20px rgba(0, 0, 0, .05); padding:11px 11px 0 11px; background-color: #F9F9F9; }
 .launchpad h1 { font: bold 23px 'Muli', sans-serif; margin:0px; width:868px; padding:0px; }
 .launchpad h1>img { border-radius:4px; height:36px; width:36px; }
 .launchpad h1>div { position:relative; bottom:8px; display:inline;}
@@ -20,10 +20,10 @@
 .launchpadCRcolumn img { display:inline; position:relative; height:17px; }
 .modalbuttonbox { text-align: right; }
 .modalbuttonbox button { margin:0 11px 0 0; padding: 6px 14px 6px 14px; font: bold 12px 'Muli', sans-serif; }
-.sectioninfocontainer { background-color:white; border-radius:6px; border: 1px solid rgba(0, 0, 0, .1);  display:inline-block; width:635px;  min-height:415px; max-height: 415px; margin: 0 0 0 10px;  padding:10px;  overflow:auto;}
+.sectioninfocontainer { background-color:white; border-radius:6px; border: 1px solid rgba(0, 0, 0, .1);  display:inline-block; width:635px;  min-height:460px; margin: 0 0 0 10px;  padding:10px;  overflow:auto;}
 #sectionpointchart { width: 627px; height: 60px; margin: 0 auto; margin-bottom: 12px; }
 
-.launchpadsectioncolumn {background-color: #F9F9F9;display:inline-block;border-right: 1px solid rgba(0, 0, 0, .1); padding-right:10px; width:175px; vertical-align: top;overflow:auto; height:415px;}
+.launchpadsectioncolumn {background-color: #F9F9F9;display:inline-block;border-right: 1px solid rgba(0, 0, 0, .1); padding-right:10px; width:175px; vertical-align: top;overflow:auto; height:460px;}
 .launchpadsectionpoints {display:inline-block; vertical-align: top;}
 .launchpadCRcolumn {display:inline-block;vertical-align: top; overflow:auto;}
 .launchpadCRcolumn td {font-style:italic;}
