--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -29,9 +29,12 @@
                 = f.text_field(:answer3, placeholder: "Optional", style:"margin-left:22px;")
                 %label Wrong answer
                 = f.text_field(:answer4, placeholder: "Optional", style:"margin-left:22px;")
+                %div.control-group{style:"width:350px;"}
+                  %div.controls
+                    = render "stored_resources/new_image"
                 %span.error_message
                 %a.next.button.button-actionable{ href: "#", style:"float:right;"} Next
-              %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:199px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
+              %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:195px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
                 %h4 
                   %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;"}
                   Tips:
