--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -39,6 +39,7 @@
                   %li Questions should cover the core knowledge area of the section they're placed.
                   %li Keep the tone informal but direct.
                   %li Make sure you check for spelling and grammar.
+                  %li You <strong>earn 50 points</strong> per published question, but will <strong>lose 100 points</strong> if it's reported and taken down.
             %div.step2{ style: "display: none;" }
               %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                 %legend{style:"margin-bottom:5px; "} Create an Arena question
@@ -62,8 +63,11 @@
                 %a.back.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
                 = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
             %div.step3{ style: "display: none;" }
-              %p This is done!
-              %a.restart.button.button-actionable{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Create another Arena question
+              %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px;"}
+              %span{style:"position:relative; top:7px; font-size:30px;"} Nice work!
+              %h4{style:"margin-top:12px; font-size:16px;"} Your question is now visible to the MetaBright community!
+              %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} Remember, you earn 50 points every time you publish a question, but if your question is reported and taken down, you'll lose 100 points.
+              %a.restart.button.button-actionable{ href: "#", style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another question
               %a.finish.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
         %div.task_view
           - if @core_tasks.empty?
@@ -74,7 +78,7 @@
           - else
             - correct_tasks = @core_tasks.select{ |t| t.status_id.to_i == Answer::CORRECT }.size
             - incorrect_tasks = @core_tasks.select{ |t| t.status_id.to_i == Answer::INCORRECT }.size
-            %p You got <strong>#{correct_tasks} out of #{correct_tasks + incorrect_tasks}</strong> questions right, and scored <strong>#{@current_section.points_earned(current_user)} points</strong> in this section!
+            %p You answered <strong>#{correct_tasks} out of #{correct_tasks + incorrect_tasks}</strong> Arena questions correctly, and scored <strong>#{@current_section.points_earned(current_user)} points</strong>!
             - if @achievement_tasks.count == 0 and @challenge_tasks.count > 0
               %p Continue on to the <strong>Creative Reponse</strong> tab to earn additional points and level-up.
             - if @challenge_tasks.count == 0 and @achievement_tasks.count > 0
@@ -89,7 +93,7 @@
               = f.hidden_field(:section_id, value: @current_section.id)
               = f.hidden_field(:source, value: "launchpad")
               %fieldset{style: "display: inline-block; margin-right:28px; width:56%;"}
-                %legend Create your own question
+                %legend Create a CR
                 %label What's your question?
                 = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Question...", style:"width:100%;")
                 %div.control-group{style:"width:350px;"}
@@ -115,6 +119,7 @@
                   %li Questions should enable people to demonstrate their knowledge or passion for the Challenge.
                   %li Keep the tone informal but direct.
                   %li Make sure you check for spelling and grammar.
+                  %li You <strong>earn 50 points</strong> per published question, but will <strong>lose 100 points</strong> if it's reported and taken down.
             %div.step2{ style: "display: none;" }
               %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                 %legend{style:"margin-bottom:5px; "} Create a CR
@@ -135,12 +140,13 @@
                 %a.back.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
                 = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
             %div.step3{ style: "display: none;" }
-              %legend{style:"margin-bottom:5px; "} Create a CR
-              %h4{style:"margin-top:12px; font-size:18px;"} Nice work!
-              %h4{style:"margin-top:12px; font-size:14px;"} Your question is published!
-              %a.restart.button.button-actionable{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Create another question
+              %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px;"}
+              %span{style:"position:relative; top:7px; font-size:30px;"} Nice work!
+              %h4{style:"margin-top:12px; font-size:16px;"} Your CR is now visible to the MetaBright community!
+              %h4{style:"margin-top:12px; font-size:16px;"} Remember, you earn 50 points every time you publish a CR, but if your question is reported and taken down, you'll lose 100 points.
+              %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} If you'd like, you can <a class="take">post a response</a> to your CR now. 
+              %a.restart.button.button-actionable{ href: "#", style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another question
               %a.finish.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
-              %a.take.button.button-info{ href: "#", style:"float:right; margin-bottom:10px; text-shadow:none; color:#333;"} Answer your question
         %div.task_view
           - if @challenge_tasks.empty?
             %p No Challenge tasks available.
@@ -166,10 +172,10 @@
               = f.hidden_field(:answer_type, value: Task::CHECKIN)
               = f.hidden_field(:section_id, value: @current_section.id)
               = f.hidden_field(:source, value: "launchpad")
-              %fieldset{style: "display: inline-block; margin-right:28px; width:56%;"}
+              %fieldset{style: "display: inline-block; margin-right:28px; margin-bottom:150px; width:56%;"}
                 %legend Create a Task
                 %label What's the Task?
-                = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Question...", style:"width:100%;")                
+                = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Task...", style:"width:100%;")                
                 %span.error_message
                 %a.next.button.button-actionable{ href: "#", style:"float:right;"} Next
               %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
@@ -180,6 +186,7 @@
                   %li Tasks should serve as a guide to improving at the section.
                   %li Keep the tone informal but direct.
                   %li Make sure you check for spelling and grammar.
+                  %li You <strong>earn 50 points</strong> per published Task, but will <strong>lose 100 points</strong> if it's reported and taken down.
             %div.step2{ style: "display: none;" }
               %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                 %legend{style:"margin-bottom:5px; "} Create a Task
@@ -197,8 +204,12 @@
                 %a.back.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
                 = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
             %div.step3{ style: "display: none;" }
-              %p This is done!
-              %a.restart.button.button-actionable{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Create another Task
+              %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px;"}
+              %span{style:"position:relative; top:7px; font-size:30px;"} Nice work!
+              %h4{style:"margin-top:12px; font-size:16px;"} Your Task is now visible to the MetaBright community!
+              %h4{style:"margin-top:12px; font-size:16px;"} Remember, you earn 50 points every time you publish a Task, but if it's reported and taken down, you'll lose 100 points.
+              %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} If you've already personally completed this Task, you can <a class="take">mark it as complete</a> now. 
+              %a.restart.button.button-actionable{ href: "#", style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another Task
               %a.finish.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
         %div.task_view
           - if @achievement_tasks.empty?
