--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -39,7 +39,10 @@
                   %li Questions should cover the core knowledge area of the section they're placed.
                   %li Keep the tone informal but direct.
                   %li Make sure you check for spelling and grammar.
-                  %li You <strong>earn 50 points</strong> per published question, but will <strong>lose 100 points</strong> if it's reported and taken down.
+                  %li 
+                    You <strong>earn 50 points</strong> per published question, but will <strong>lose 100 points</strong> if that question is reported and taken down.
+                    %span
+                      %div.mb-tooltip
             %div.step2{ style: "display: none;" }
               %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                 %legend{style:"margin-bottom:5px; "} Create an Arena question
