--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
       $(function(){ init_iph(); });
   %body
     - if current_user
+      = render "layouts/launchpad_modal"
       = render "layouts/explore_modal"
       = render "layouts/launchpad_modal"   
       = render "layouts/report_issue_modal"
