--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -42,7 +42,7 @@
                   %li 
                     You <strong>earn 50 points</strong> per published question, but will <strong>lose 100 points</strong> if that question is reported and taken down.
                     %span
-                      %div.mb-tooltip
+                      %a#points-tt.mb-tooltip{href:"#", rel:"tooltip"}
             %div.step2{ style: "display: none;" }
               %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                 %legend{style:"margin-bottom:5px; "} Create an Arena question
@@ -233,6 +233,7 @@
                       %span.launchpadpoints= t.points_awarded.to_i.to_s + " points"
                     - else
                       = link_to "Incomplete", take_section_path(@current_section, task_id: t.id), class: "label label-important"
+
   :javascript
     function log_error(error){
       $(".editor_view:visible").find("span.error_message").text(error).show().delay(3000).fadeOut("slow");
@@ -320,3 +321,5 @@
         });
       });
     });
+    
+    $('#points-tt').tooltip({trigger: 'click', title:'Questions and Tasks can be reported for spam, misplacement, and egregiously poor quality.'})
