--- a/app/assets/stylesheets/launchpad.css
+++ b/app/assets/stylesheets/launchpad.css
@@ -3,7 +3,7 @@
 .launchpad h1>img { border-radius:4px; height:36px; width:36px; }
 .launchpad h1>div { position:relative; bottom:8px; display:inline;}
 .launchpadcontent { margin-left:10px; margin-top:10px; border-collapse:collapse; }
-.launchpadpoints { font-weight:bold; font-size:11px; white-space:nowrap; }
+.launchpadpoints { font-weight:bold; font-size:11px; white-space:nowrap; position:relative; top:2px;}
 .launchpadsectioncolumn { display: inline-block; border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; padding: 10px;width: 160px;vertical-align: top; overflow: auto; height: 330px;}
 .launchpadCRcolumn { width: 100%; display:inline-block; vertical-align: top; overflow:auto; }
 .launchpadCRcolumn table { width: 100%; }
@@ -49,4 +49,8 @@
 .editor_view .error_message { float: left; color: #ee5f5b; font-size: 13px; display: none; width: 250px; }
 #arena_tab .step1 label{ display:inline-block; }
 #arena_tab .step1 input{ position:relative; top:2px; }
+
+.launchpadtip{background-color: rgb(253, 240, 213);border-radius: 6px;margin-right: 12px;padding:3px 8px; margin-bottom:12px;}
+.launchpadtip img{width:15px; position:relative; bottom:2px;}
+.launchpadtip p{font-size: 14px; line-height: 18px; display:inline;}
 
