--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -42,7 +42,7 @@
                   %li 
                     You <strong>earn 50 points</strong> per published question, but will <strong>lose 100 points</strong> if that question is reported and taken down.
                     %span
-                      %a#points-tt.mb-tooltip{href:"#", rel:"tooltip"}
+                      %a#points-tt1.mb-tooltip{href:"#", rel:"tooltip"}
             %div.step2{ style: "display: none;" }
               %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                 %legend{style:"margin-bottom:5px; "} Create an Arena question
@@ -127,7 +127,10 @@
                   %li Questions should enable people to demonstrate their knowledge or passion for the Challenge.
                   %li Keep the tone informal but direct.
                   %li Make sure you check for spelling and grammar.
-                  %li You <strong>earn 50 points</strong> per published question, but will <strong>lose 100 points</strong> if it's reported and taken down.
+                  %li 
+                    You <strong>earn 50 points</strong> per published question, but will <strong>lose 100 points</strong> if that question is reported and taken down.
+                    %span
+                      %a#points-tt2.mb-tooltip{href:"#", rel:"tooltip"}
             %div.step2{ style: "display: none;" }
               %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                 %legend{style:"margin-bottom:5px; "} Create a CR
@@ -158,7 +161,7 @@
         %div.task_view
           %div.launchpadtip
             %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon"}
-            %p CR's let you demonstrate your skills. Responses to CR's appear in the stream so they can be voted and commented upon.
+            %p Creative Response questions let you demonstrate your skills. Responses to CR's appear in the stream so they can be voted and commented upon.
           - if @challenge_tasks.empty?
             %p No Challenge tasks available.
           - else
@@ -197,7 +200,10 @@
                   %li Tasks should serve as a path to improving at the section.
                   %li Keep the tone informal but direct.
                   %li Make sure you check for spelling and grammar.
-                  %li You <strong>earn 50 points</strong> per published Task, but will <strong>lose 100 points</strong> if it's reported and taken down.
+                  %li 
+                    You <strong>earn 50 points</strong> per published Task, but will <strong>lose 100 points</strong> if it's reported and taken down.
+                    %span
+                      %a#points-tt3.mb-tooltip{href:"#", rel:"tooltip"}
             %div.step2{ style: "display: none;" }
               %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
                 %legend{style:"margin-bottom:5px; "} Create a Task
@@ -225,7 +231,7 @@
         %div.task_view
           %div.launchpadtip
             %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon"}
-            %p Tasks verify the things you've done and guide you for what to do next. 
+            %p Use Tasks to verify the things you've done and guide you towards what to do next. 
           - if @achievement_tasks.empty?
             %p No tasks available.
           - else
@@ -333,4 +339,6 @@
       });
     });
     
-    $('#points-tt').tooltip({trigger: 'click', title:'Questions and Tasks can be reported for spam, misplacement, and egregiously poor quality.'})
+    $('#points-tt1').tooltip({trigger: 'click', title:'Questions and Tasks can be reported for spam, misplacement, and egregiously poor quality.'})
+    $('#points-tt2').tooltip({trigger: 'click', title:'Questions and Tasks can be reported for spam, misplacement, and egregiously poor quality.'})
+    $('#points-tt3').tooltip({trigger: 'click', title:'Questions and Tasks can be reported for spam, misplacement, and egregiously poor quality.'})
