--- a/app/views/sections/_intro.html.haml
+++ b/app/views/sections/_intro.html.haml
@@ -28,4 +28,4 @@
           %span.inttitle This is just the beginning!
           %br
           %span.intdetails Continue to improve your score by taking <strong>Challenge Questions</strong> and unlocking new sections.
-    = link_to "Begin now", continue_section_path(@section.id), id: "nextbutton", style: "float: right; margin: 0 10px 10px 0;", remote: true, class: "button button-actionable", method: "post"
+    = link_to "Begin now", start_section_path(@section.id), id: "nextbutton", style: "float: right; margin: 0 10px 10px 0;", remote: true, class: "button button-actionable", method: "post"
