closing modals on esc

--- a/app/views/layouts/_explore_modal.html.haml
+++ b/app/views/layouts/_explore_modal.html.haml
@@ -10,5 +10,5 @@
       });
     })
     
-  %div#explore_modal.dropdown_modal.modal.hide.fade
+  %div#explore_modal.dropdown_modal.modal.hide.fade{tabindex: "-1"}
       
