--- a/app/views/layouts/_launchpad_modal.html.haml
+++ b/app/views/layouts/_launchpad_modal.html.haml
@@ -1,5 +1,5 @@
 - if current_user && @current_section
-  %div#launchpad.dropdown_modal.modal.hide.fade{ style: "top: 5%;"}
+  %div#launchpad.dropdown_modal.modal.hide.fade{ style: "top: 5%;", tabindex: "-1"}
     %div.overlay
       %div.launchpad
         %div.modal_close
