--- a/app/views/layouts/_login_modal.html.haml
+++ b/app/views/layouts/_login_modal.html.haml
@@ -1,4 +1,4 @@
-%div#login_modal.dropdown_modal.modal.hide.fade
+%div#login_modal.dropdown_modal.modal.hide.fade{tabindex: "-1"}
   %div.explorecontainer{ style: "width: 465px; background:none; border:none;" }
     :javascript
       $(function(){ close_button(); });
