--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -77,7 +77,7 @@
             %p Enter the Arena and take multiple-choice questions to discover where you stand. 
           - tasks_completed = @core_tasks.select{ |t| not t.status_id.nil? }.size > 0
           - if @core_tasks.empty?
-            %p No Arena questions available.
+            %p No Arena questions are available at the moment. Check back again later.
           - elsif tasks_completed
             - correct_tasks = @core_tasks.select{ |t| t.status_id.to_i == Answer::CORRECT }.size
             - earned_points = 0
@@ -88,7 +88,7 @@
             - if tasks_remaining
               %p= link_to "Continue", start_section_path(@current_section), class: "button button-actionable"
             - else
-              %p Don't worry, more Arena questions are added all everyday. Complete some Tasks or answer some Creative Responses to earn more points and continue to level up. 
+              %p Arena questions are added daily. When more are available, you can return here to take them. Complete Tasks or answer some Creative Responses to earn more points and continue to level up. 
           - else
             %p= link_to "Start", start_section_path(@current_section), class: "button button-actionable"            
       %div#questions_tab.tab_content{ style: "" }
