--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -69,7 +69,7 @@
         - elsif r.task.answer_sub_type == Task::YOUTUBE
           %center
             %div.youtube_answer{ id: "youtube_answer_#{r.id}", alt: r.submitted_answer.content }        
-      = render "comments/comments", { owner: r.submitted_answer, owner_type: "SubmittedAnswer", owner_id: r.submitted_answer_id, comment_count: r.submitted_answer.comments.size, created_at: r.created_at, sharing_url: submission_details_url(r.path, r.submitted_answer.id), sharing_title: "Great response to the #{r.path.name} Challenge on @MetaBright." }
+      = render "comments/comments", { owner: r.submitted_answer, owner_type: "SubmittedAnswer", owner_id: r.submitted_answer_id, comment_count: r.submitted_answer.comments.size, created_at: r.created_at, sharing_url: submission_details_url(r.path, r.submitted_answer.id), sharing_title: "Great response in the #{r.path.name} Challenge on @MetaBright." }
 
 :javascript
   $(function(){
